# algebra

./: README.md  algebra.cabal
src/Data/: Algebra.hs  Vector.hs
src/Data/Algebra/: Group.hs  Module.hs  Ring.hs
